kube-manifests/04-Ingress-e2e-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-e2e-ssl
  annotations:
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # Backend Annotations
    appgw.ingress.kubernetes.io/backend-hostname: "app1.dwistudy.in" # Optional
    appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/appgw-trusted-root-certificate: "backend-tlss"
    # Health Probe Annotations
    appgw.ingress.kubernetes.io/health-probe-hostname: "app1.dwistudy.in"
    appgw.ingress.kubernetes.io/health-probe-port: "443"
    appgw.ingress.kubernetes.io/health-probe-path: /app1/index.html
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-298, 299"
    appgw.ingress.kubernetes.io/health-probe-interval: "32"
    appgw.ingress.kubernetes.io/health-probe-timeout: "32"
    appgw.ingress.kubernetes.io/health-probe-unhealthy-threshold: "4"
spec:
  ingressClassName: azure-application-gateway
  # SSL Certs - Associate using Kubernetes Secrets         
  tls:
  - secretName: tls-secret #frontendsecret

  rules:
  - host: app1.dwistudy.in
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: myapp-nginx-clusterip-service
            port:
              number: 443
